# icon-python-tutorials

./: README.md  pyproject.toml
icon_python_tutorials/projects/1_getting-started-with-the-icon-python-sdk/: main.py
icon_python_tutorials/projects/2_how-to-query-a-smart-contract/: main.py
icon_python_tutorials/projects/3_how-to-make-a-smart-contract-call/: main.py
icon_python_tutorials/projects/3_how-to-send-an-icx-transaction/: main.py
